Bug 793809 - Take FM radio initialization off main thread, r=jlebar